# etiennemerenda_website

./: .gitignore  Procfile  pyproject.toml  requirements.txt
_annexes/: Titou's website.xd  specificity.md
_annexes/images/: http_download.py
_annexes/images/SVG/: credits_svg.json
etiennemerenda_website/: manage.py
etiennemerenda_website/etiennemerenda_website/: settings.py  urls.py  wsgi.py
etiennemerenda_website/home/: urls.py  views.py
etiennemerenda_website/home/templates/: home.html  home_old.html
etiennemerenda_website/static/assets/css/: background.css  base.css  error.css  footer.css  home.css  nav.css  toggle.css
etiennemerenda_website/static/assets/js/: background.js  error.js  home_svg.js  toggle.js  toggle_svg.js  utils.js
etiennemerenda_website/static/assets/js/Home/: home_svg.js  home_svg.old.js  init.js
etiennemerenda_website/static/assets/js/home/: home.js
etiennemerenda_website/templates/: 404.html  500.html  base.html
etiennemerenda_website/templates/includes/: background.html  footer.html  menu.html
