[tool.poetry]
name = "etiennemerendawebsite"
version = "0.1.0"
description = "It's my personnal website build on Django and REACT with animated SVG."
authors = ["Etienne Merenda <etiennemerenda@vivaldi.net>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2"
djangorestframework = "^3.11.2"
gunicorn = "^20.0.4"
django-heroku = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
